--- a/site/docs.html
+++ b/site/docs.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data: https:; connect-src 'self'; font-src 'self' https://cdn.jsdelivr.net;">
   <link rel="icon" type="image/png" href="./logo.png">
   <title>Docs - Open Lab Components</title>
   <!-- GitHub 风格的 Markdown 样式 + 代码高亮样式，仅文档页使用 -->
