--- a/site/index.html
+++ b/site/index.html
@@ -3,8 +3,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Open Lab Components - 开源实验器材 HTML Fragment 组件库，为 STEM 教育提供可复用的可视化组件。包含物理实验器材、电路元件等多种实验组件，即插即用，零外部依赖。">
+  <meta name="keywords" content="Open Lab Components,HTML Fragment,STEM教育,物理实验,电路元件,组件库,开源组件,实验器材,可视化组件,Web Components">
+  <meta name="author" content="Open Lab Components Team">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="zh-CN">
+  <link rel="canonical" href="https://itkdm.github.io/open-lab-components/">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://itkdm.github.io/open-lab-components/">
+  <meta property="og:title" content="Open Lab Components - 开源实验器材组件库">
+  <meta property="og:description" content="开源实验器材 HTML Fragment 组件库，为 STEM 教育提供可复用的可视化组件。包含物理实验器材、电路元件等多种实验组件。">
+  <meta property="og:image" content="https://itkdm.github.io/open-lab-components/logo.png">
+  <meta property="og:locale" content="zh_CN">
+  <meta property="og:site_name" content="Open Lab Components">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://itkdm.github.io/open-lab-components/">
+  <meta name="twitter:title" content="Open Lab Components - 开源实验器材组件库">
+  <meta name="twitter:description" content="开源实验器材 HTML Fragment 组件库，为 STEM 教育提供可复用的可视化组件。">
+  <meta name="twitter:image" content="https://itkdm.github.io/open-lab-components/logo.png">
+  
+  <!-- Baidu Site Verification -->
+  <meta name="baidu-site-verification" content="codeva-xRoTjtvxqL" />
+  
   <link rel="icon" type="image/png" href="./logo.png">
   <title>Open Lab Components - 开源实验器材组件库</title>
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Open Lab Components",
+    "alternateName": "OLC",
+    "url": "https://itkdm.github.io/open-lab-components/",
+    "description": "开源实验器材 HTML Fragment 组件库，为 STEM 教育提供可复用的可视化组件",
+    "inLanguage": ["zh-CN", "en"],
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://itkdm.github.io/open-lab-components/components.html?search={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Open Lab Components",
+    "applicationCategory": "EducationalApplication",
+    "operatingSystem": "Web",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "CNY"
+    },
+    "description": "开源实验器材 HTML Fragment 组件库，为 STEM 教育提供可复用的可视化组件。包含物理实验器材、电路元件等多种实验组件，即插即用，零外部依赖。",
+    "programmingLanguage": "HTML, CSS, JavaScript",
+    "license": "https://github.com/itkdm/open-lab-components/blob/main/LICENSE",
+    "codeRepository": "https://github.com/itkdm/open-lab-components",
+    "keywords": "HTML Fragment,STEM教育,物理实验,电路元件,组件库,开源组件,实验器材,可视化组件"
+  }
+  </script>
+  
   <style>
     * { 
       margin: 0; 
