--- a/site/components.html
+++ b/site/components.html
@@ -3,8 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="浏览 Open Lab Components 的所有实验器材组件，包括物理实验器材和电路元件。支持搜索、筛选和实时预览，可复制代码到您的项目中。">
+  <meta name="keywords" content="Open Lab Components,组件列表,物理实验组件,电路元件,组件浏览,HTML组件,STEM教育组件">
+  <meta name="author" content="Open Lab Components Team">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="zh-CN">
+  <link rel="canonical" href="https://itkdm.github.io/open-lab-components/components.html">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://itkdm.github.io/open-lab-components/components.html">
+  <meta property="og:title" content="组件列表 - Open Lab Components">
+  <meta property="og:description" content="浏览 Open Lab Components 的所有实验器材组件，支持搜索、筛选和实时预览。">
+  <meta property="og:image" content="https://itkdm.github.io/open-lab-components/logo.png">
+  <meta property="og:locale" content="zh_CN">
+  <meta property="og:site_name" content="Open Lab Components">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://itkdm.github.io/open-lab-components/components.html">
+  <meta name="twitter:title" content="组件列表 - Open Lab Components">
+  <meta name="twitter:description" content="浏览 Open Lab Components 的所有实验器材组件，支持搜索、筛选和实时预览。">
+  <meta name="twitter:image" content="https://itkdm.github.io/open-lab-components/logo.png">
+  
+  <!-- Baidu Site Verification -->
+  <meta name="baidu-site-verification" content="codeva-xRoTjtvxqL" />
+  
   <link rel="icon" type="image/png" href="./logo.png">
-  <title>Components - Open Lab Components</title>
+  <title>组件列表 - Open Lab Components</title>
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "组件列表 - Open Lab Components",
+    "description": "浏览 Open Lab Components 的所有实验器材组件，包括物理实验器材和电路元件。支持搜索、筛选和实时预览。",
+    "url": "https://itkdm.github.io/open-lab-components/components.html",
+    "inLanguage": ["zh-CN", "en"],
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "Open Lab Components",
+      "url": "https://itkdm.github.io/open-lab-components/"
+    }
+  }
+  </script>
+  
   <style>
     * { 
       margin: 0; 
