--- a/site/docs.html
+++ b/site/docs.html
@@ -3,9 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Open Lab Components 文档中心：查看组件规范协议、分类与命名规则、贡献指南等完整文档，帮助您按统一标准编写和维护实验器材组件。">
+  <meta name="keywords" content="Open Lab Components,文档,组件规范,SPEC,贡献指南,组件开发,组件协议,分类规则">
+  <meta name="author" content="Open Lab Components Team">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="zh-CN">
+  <link rel="canonical" href="https://itkdm.github.io/open-lab-components/docs.html">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data: https:; connect-src 'self'; font-src 'self' https://cdn.jsdelivr.net;">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://itkdm.github.io/open-lab-components/docs.html">
+  <meta property="og:title" content="文档中心 - Open Lab Components">
+  <meta property="og:description" content="Open Lab Components 文档中心：查看组件规范协议、分类与命名规则、贡献指南等完整文档。">
+  <meta property="og:image" content="https://itkdm.github.io/open-lab-components/logo.png">
+  <meta property="og:locale" content="zh_CN">
+  <meta property="og:site_name" content="Open Lab Components">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://itkdm.github.io/open-lab-components/docs.html">
+  <meta name="twitter:title" content="文档中心 - Open Lab Components">
+  <meta name="twitter:description" content="Open Lab Components 文档中心：查看组件规范协议、分类与命名规则、贡献指南等完整文档。">
+  <meta name="twitter:image" content="https://itkdm.github.io/open-lab-components/logo.png">
+  
+  <!-- Baidu Site Verification -->
+  <meta name="baidu-site-verification" content="codeva-xRoTjtvxqL" />
+  
   <link rel="icon" type="image/png" href="./logo.png">
-  <title>Docs - Open Lab Components</title>
+  <title>文档中心 - Open Lab Components</title>
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "TechArticle",
+    "headline": "Open Lab Components 文档中心",
+    "description": "Open Lab Components 文档中心：查看组件规范协议、分类与命名规则、贡献指南等完整文档。",
+    "url": "https://itkdm.github.io/open-lab-components/docs.html",
+    "inLanguage": ["zh-CN", "en"],
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "Open Lab Components",
+      "url": "https://itkdm.github.io/open-lab-components/"
+    },
+    "about": {
+      "@type": "Thing",
+      "name": "Component Development",
+      "description": "组件开发规范和指南"
+    }
+  }
+  </script>
+  
   <!-- GitHub 风格的 Markdown 样式 + 代码高亮样式，仅文档页使用 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css@5.5.1/github-markdown-light.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/styles/github.min.css">
