--- a/site/playground.html
+++ b/site/playground.html
@@ -3,8 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Open Lab Components 组件预览与调试工具：实时预览组件效果，调整参数配置，查看使用代码，方便快速测试和集成组件。">
+  <meta name="keywords" content="Open Lab Components,组件预览,组件调试,实时预览,组件测试,参数配置">
+  <meta name="author" content="Open Lab Components Team">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="zh-CN">
+  <link rel="canonical" href="https://itkdm.github.io/open-lab-components/playground.html">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://itkdm.github.io/open-lab-components/playground.html">
+  <meta property="og:title" content="组件预览 - Open Lab Components">
+  <meta property="og:description" content="Open Lab Components 组件预览与调试工具：实时预览组件效果，调整参数配置，查看使用代码。">
+  <meta property="og:image" content="https://itkdm.github.io/open-lab-components/logo.png">
+  <meta property="og:locale" content="zh_CN">
+  <meta property="og:site_name" content="Open Lab Components">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://itkdm.github.io/open-lab-components/playground.html">
+  <meta name="twitter:title" content="组件预览 - Open Lab Components">
+  <meta name="twitter:description" content="Open Lab Components 组件预览与调试工具：实时预览组件效果，调整参数配置，查看使用代码。">
+  <meta name="twitter:image" content="https://itkdm.github.io/open-lab-components/logo.png">
+  
+  <!-- Baidu Site Verification -->
+  <meta name="baidu-site-verification" content="codeva-xRoTjtvxqL" />
+  
   <link rel="icon" type="image/png" href="./logo.png">
   <title>组件预览 - Open Lab Components</title>
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "Open Lab Components Playground",
+    "description": "Open Lab Components 组件预览与调试工具：实时预览组件效果，调整参数配置，查看使用代码。",
+    "url": "https://itkdm.github.io/open-lab-components/playground.html",
+    "inLanguage": ["zh-CN", "en"],
+    "applicationCategory": "DeveloperApplication",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "Open Lab Components",
+      "url": "https://itkdm.github.io/open-lab-components/"
+    },
+    "featureList": "实时预览,参数调整,代码生成,组件调试"
+  }
+  </script>
+  
   <style>
     * { 
       margin: 0; 
