--- a/site/index.html
+++ b/site/index.html
@@ -29,6 +29,9 @@
   <!-- Baidu Site Verification -->
   <meta name="baidu-site-verification" content="codeva-xRoTjtvxqL" />
   
+  <!-- Microsoft Bing Site Verification -->
+  <meta name="msvalidate.01" content="8369F75782EB856615D12EF9B5706E82" />
+  
   <link rel="icon" type="image/png" href="./logo.png">
   <title>Open Lab Components - 开源实验器材组件库</title>
   
