错误修复和md文档规范化调整

--- a/site/components.html
+++ b/site/components.html
@@ -786,7 +786,7 @@
         select.appendChild(option);
       });
       
-      select.addEventListener('change', filter);
+      select.onchange = filter;
     }
 
     document.getElementById('sortFilter').addEventListener('change', (e) => {
